# src/backend/src/docs/swagger.json
@@ -385,7 +385,7 @@
                 }
             }
         },
-        "/streak/{user_ids}": {
+        "/streak": {
             "get": {
                 "security": [
                     {
@@ -396,7 +396,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "streak"
+                    "Streak"
                 ],
                 "summary": "retrieves the number of days a user has been active back to back",
                 "parameters": [
@@ -404,7 +404,7 @@
                         "type": "string",
                         "description": "Comma-separated list of user IDs without spaces",
                         "name": "user_ids",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     }
                 ],
